--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VitalHealth Hub</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -27,7 +27,7 @@
     </main>
     <center>
         <video id="myVideo" width="800" height="800" controls autoplay>
-          <source src="/images/v09044g40000c2j6olmf1dju2b0u4520.mov" type="video/mp4">
+          <source src="images/v09044g40000c2j6olmf1dju2b0u4520.mov" type="video/mp4">
           Your browser does not support the video tag.
         </video>
       </center>
