--- a/login.html
+++ b/login.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VitalHealth Hub</title>
-    <link rel="stylesheet" href="/style.css">
-    <script defer src="/script.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
     <header>
         <h1>VitalHealth Hub</h1>
-        <img src="/images/logo.jpeg" alt="VitalHealth Hub Logo" class="logo">
+        <img src="images/logo.jpeg" alt="VitalHealth Hub Logo" class="logo">
         <nav>
             <ul>
                 <h1><li><a href="index.html">Home</a></li>
