--- a/products.html
+++ b/products.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VitalHealth Hub - Products</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>VitalHealth Hub</h1>
-        <img src="/images/logo.jpeg" alt="VitalHealth Hub Logo" class="logo">
+        <img src="logo.jpeg" alt="VitalHealth Hub Logo" class="logo">
         <nav>
             <ul>
                 <h1><li><a href="index.html">Home</a></li>
@@ -26,73 +26,73 @@
         <h2>Our Products</h2>
         <div id="product-list">
             <div class="product">
-                <img src="/images/Dr. JOEL'S Immune Support Vitamin C.jpeg" alt="Vitamin C">
+                <img src="Dr. JOEL'S Immune Support Vitamin C.jpeg" alt="Vitamin C">
                 <h3>Dr. JOEL'S Immune Support Vitamin C</h3>
                 <p>$10.99</p>
                 <button class="add-to-cart" data-name="Vitamin C" data-price="10.99">Add to Cart</button>
             </div>
             <div class="product">
-                <img src="/images/NATURELO Burpless Omega 3 Fish Oil Supplement.jpeg" alt="Omega-3">
+                <img src="NATURELO Burpless Omega 3 Fish Oil Supplement.jpeg" alt="Omega-3">
                 <h3>NATURELO Burpless Omega 3 Fish Oil Supplement</h3>
                 <p>$15.49</p>
                 <button class="add-to-cart" data-name="Omega-3" data-price="15.49">Add to Cart</button>
             </div>
             <div class="product">
-                <img src="/images/Nutricost Whey Protein Powder.jpeg" alt="Protein Powder">
+                <img src="Nutricost Whey Protein Powder.jpeg" alt="Protein Powder">
                 <h3>Nutricost Whey Protein Powder</h3>
                 <p>$29.99</p>
                 <button class="add-to-cart" data-name="Protein Powder" data-price="29.99">Add to Cart</button>
             </div>
             <div class="product">
-                <img src="/images/DAKE Vitamin Supplement..jpeg" alt="DAKE">
+                <img src="DAKE Vitamin Supplement..jpeg" alt="DAKE">
                 <h3>DAKE Vitamin Supplement</h3>
                 <p>$19.95</p>
                 <button class="add-to-cart" data-name="DAKE Supplement" data-price="19.95">Add to Cart</button>
             </div>
             <div class="product">
-                <img src="/images/Superfood Fruit and Veggie Supplement.jpeg" alt="Superfood">
+                <img src="Superfood Fruit and Veggie Supplement.jpeg" alt="Superfood">
                 <h3>Superfood Fruit and Veggie Supplement</h3>
                 <p>$10.99</p>
                 <button class="add-to-cart" data-name="Fruit and Veggie Supplement" data-price="10.99">Add to Cart</button>
             </div>
             <div class="product">
-                <img src="/images/whole food multivitamin.jpeg" alt="Whole Food">
+                <img src="whole food multivitamin.jpeg" alt="Whole Food">
                 <h3>Whole Food Multivitamin</h3>
                 <p>$24.95</p>
                 <button class="add-to-cart" data-name="Whole Food Multivitamin" data-price="24.95">Add to Cart</button>
             </div>
             <div class="product">
-                <img src="/images/D3.jpeg" alt="Vitamin D3">
+                <img src="D3.jpeg" alt="Vitamin D3">
                 <h3>Nature Made Vitamin D3</h3>
                 <p>$16.99</p>
                 <button class="add-to-cart" data-name="Nature Made Vitamin D3" data-price="16.99">Add to Cart</button>
             </div>
             <div class="product">
-                <img src="/images/Codeage Teen’s Daily .jpeg" alt="Codeage">
+                <img src="Codeage Teen’s Daily .jpeg" alt="Codeage">
                 <h3>Codeage Teen's Daily Multivitamin Supplement</h3>
                 <p>$10.99</p>
                 <button class="add-to-cart" data-name="Codeage Teen's Daily Multivitamin Supplement" data-price="10.99">Add to Cart</button>
             </div>
             <div class="product">
-                <img src="/images/4-in-1 Calcium Supplements for Women and Men.jpeg" alt="4-in-1">
+                <img src="4-in-1 Calcium Supplements for Women and Men.jpeg" alt="4-in-1">
                 <h3>4-in-1 Calcium Supplements for Women and Men</h3>
                 <p>$12.99</p>
                 <button class="add-to-cart" data-name="4-in-1 Calcium Supplements for Women and Men" data-price="12.99">Add to Cart</button>
             </div>
             <div class="product">
-                <img src="/images/Nature Made Vitamin E.jpeg" alt="Vitamin E">
+                <img src="Nature Made Vitamin E.jpeg" alt="Vitamin E">
                 <h3>Nature Made Vitamin E</h3>
                 <p>$10.99</p>
                 <button class="add-to-cart" data-name="Nature Made Vitamin E" data-price="10.99">Add to Cart</button>
             </div>
             <div class="product">
-                <img src="/images/Vital Vitamins Multi Collagen Plus.jpeg" alt="Vital Vitamins">
+                <img src="Vital Vitamins Multi Collagen Plus.jpeg" alt="Vital Vitamins">
                 <h3>Vital Vitamins Multi Collagen Plus</h3>
                 <p>$6.99</p>
                 <button class="add-to-cart" data-name="Vital Vitamins Multi Collagen Plus" data-price="6.99">Add to Cart</button>
             </div>
             <div class="product">
-                <img src="/images/Lithium Ascorbate 1 mg with Vitamin C - 60 Tablets.jpeg" alt="Lithium Ascorbate">
+                <img src="Lithium Ascorbate 1 mg with Vitamin C - 60 Tablets.jpeg" alt="Lithium Ascorbate">
                 <h3>Lithium Ascorbate 1 mg with Vitamin C - 60 Tablets</h3>
                 <p>$19.98</p>
                 <button class="add-to-cart" data-name="Lithium Ascorbate 1 mg with Vitamin C" data-price="19.98">Add to Cart</button>
