--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>VitalHealth Hub</h1>
-        <img src="images/logo.jpeg" alt="VitalHealth Hub Logo" class="logo">
+        <img src="logo.jpeg" alt="VitalHealth Hub Logo" class="logo">
         <nav>
             <ul>
                 <h1><li><a href="index.html">Home</a></li>
