--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="/images/logo.jpeg" alt="VitalHealth Hub Logo" class="logo">
+        <img src="logo.jpeg" alt="VitalHealth Hub Logo" class="logo">
         <h1>VitalHealth Hub</h1>
         <nav>
             <ul>
